# MeetSpotX

./: .gitignore  .vercelignore  AUTOMATION_GUIDE.md  BADGE_FIX_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTOR_RECRUITMENT_ISSUE.md  DEPLOY_CHECKLIST.md  DEVELOPER_RECRUITMENT_SUMMARY.md  Dockerfile  FINAL_STATUS.md  GITHUB_ACTIONS_CLEANUP_REPORT.md  GITHUB_ACTIONS_FINAL_REPORT.md  GITHUB_CONTRIBUTOR_RECRUITMENT.md  GITHUB_ISSUE_COPY_PASTE.txt  GITHUB_ISSUE_GUIDE.md  GITHUB_ISSUE_PUBLICATION_GUIDE.md  GITHUB_ISSUE_TEMPLATE.md  GITHUB_STATS_PLAN.md  PROJECT_COMPLETION_REPORT.md  PR_TEMPLATE.md  PUSH_GUIDE.md  README.md  README_DEPLOY.md  README_EN.md  README_RESOLVED.md  README_ZH.md  RECRUITMENT_ACTION_PLAN.md  SECURITY.md  VERCEL_DEPLOY.md  YAML_FIX_REPORT.md  check_status.py  deploy.bat  deploy.sh  deploy_to_vercel.bat  deploy_to_vercel.sh  docker-compose.yml  main.py  package.json  pyproject.toml  (+9 more)
.github/: DESCRIPTION  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  frontend_ui_optimization.md  help_wanted.md  ml_recommendation.md
.github/workflows/: auto-merge-clean.yml  auto-merge-dependabot.yml  auto-merge.yml  ci-clean.yml  ci-simple.yml  update-badges.yml
api/: index.py  minimal.py  simple.py
app/: config.py  llm.py
app/agent/: __init__.py  base.py  browser.py  manus.py  mcp.py  planning.py  react.py  swe.py  toolcall.py
app/flow/: base.py  flow_factory.py  planning.py
app/mcp/: server.py
app/prompt/: browser.py  manus.py  mcp.py  planning.py  swe.py  toolcall.py
app/sandbox/: __init__.py  client.py
app/tool/: __init__.py  baidu_search.py  base.py  bash.py  bing_search.py  browser_use_tool.py  create_chat_completion.py  file_saver.py  mcp.py  meetspot_recommender.py  meetspot_recommender.py.bak  meetspot_recommender.py.bak2  meetspot_recommender_backup.py  (+6 more)
config/: .gitignore  config.toml.example
marketing/: csdn_article.md  juejin_article.md  promotion_materials.md  promotion_plan.md  xiaohongshu_article.md
openmanus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
public/: README.md
tests/: README.md  __init__.py  test_api.py  test_integration.py  test_recommender.py
workspace/: example.txt  meetspot_finder.html  meetspot_recommendations_f5a92ef1.html
(+64 files in other folders)
